<resources>
    <string name="app_name">CS 369 WORDLE TBUSCHE</string>
    <string name="game_btn">click image to begin game</string>
    <string name="login_btn">LOGIN</string>
    <string name="stats_btn">STATS</string>
    <string name="how_to_btn">HOW TO PLAY</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">email address</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">register here</string>
    <string name="action_forgot_pwd">forgot password</string>
    <string name="submit_btn">LOGIN</string>

    <string name="new_acct">ACCOUNT REGISTRATION</string>
    <string name="new_acct_email">enter your email</string>
    <string name="new_acct_password1">enter your password</string>
    <string name="new_acct_password2">reenter password</string>
    <string name="new_acct_register">COMPLETE REGISTRATION</string>

    <string name="forgot_pwd">RESET PASSWORD</string>
    <string name="forgot_msg1">forgot your password? click the button below</string>
    <string name="forgot_msg2">then check your email to reset password</string>
    <string name="forgot_email">SEND EMAIL</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="stats">STATISTICS</string>
    <string name="games_played">games played</string>
    <string name="win_percentage">win %</string>
    <string name="current_streak">current\nstreak</string>
    <string name="max_streak">max\nstreak</string>
    <string name="guess_distrb">GUESS DISTRIBUTION</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="how_to_header">HOW TO PLAY</string>
    <string name="how_to_guess">Guess the Wordle in 6 tries.</string>
    <string name="how_to_example">Examples</string>
    <string name="how_to_bullets1">\u2022 Each guess must be a valid 5-letter word.</string>
    <string name="how_to_bullets2">\u2022 The color of the tiles will change to show how close your guess was to the
        word.
    </string>
    <string name="ex_1">W is in the word and in the correct spot.</string>
    <string name="ex_2">I is in the word but in the wrong spot.</string>
    <string name="ex_3">U is not in the word in any spot.</string>

</resources>