<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HowToPlay"
        android:orientation="vertical"
        android:padding="25dp">
    <ImageButton
            android:id="@+id/howToMainBtn"
            app:srcCompat="@drawable/ic_twotone_arrow_circle_left_24"
            android:layout_width="54dp"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintVertical_bias="0.09"
            android:background="@null"/>
    <TextView
            android:id="@+id/how_to_header"
            android:text="@string/how_to_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="18dp"/>
    <TextView
            android:id="@+id/guess"
            android:text="@string/how_to_guess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="15dp"/>
    <TextView
            android:id="@+id/bullet_rules1"
            android:text="@string/how_to_bullets1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
    <TextView
            android:id="@+id/bullet_rules2"
            android:text="@string/how_to_bullets2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
    <TextView
            android:id="@+id/example"
            android:text="@string/how_to_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="20dp"/>
    <ImageView
            android:id="@+id/ex_1_view"
            app:srcCompat="@drawable/example1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/example_1"
            android:text="@string/ex_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="10dp"/>
    <ImageView
            android:id="@+id/ex_2_view"
            app:srcCompat="@drawable/example2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/example_2"
            android:text="@string/ex_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="10dp"/>
    <ImageView
            android:id="@+id/imageView5"
            app:srcCompat="@drawable/example3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/example_3"
            android:text="@string/ex_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="10dp"/>
</LinearLayout>