<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerStats"
        android:orientation="vertical"
        android:weightSum="2"
        android:padding="25dp">
    <ImageButton
            android:id="@+id/statsToMainBtn"
            app:srcCompat="@drawable/ic_twotone_arrow_circle_left_24"
            android:layout_width="54dp"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginBackground"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintVertical_bias="0.09"
            android:background="@null"/>
    <TextView
            android:id="@+id/stats_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:gravity="center_horizontal"
            android:textSize="40sp"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="25dp">
    <TableRow android:id="@+id/stat_labels"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="4">
            <TextView
                    android:id="@+id/games_played"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/games_played"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/win_percent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/win_percentage"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/curr_streak"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current_streak"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/max_streak"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max_streak"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow android:id="@+id/stat_values"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="4"
                  >
        <TextView
                    android:id="@+id/games_played_val"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/win_percentage_val"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="100%"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/curr_streak_val"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/max_streak_val"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/table_border_background"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow android:id="@+id/wordle_label"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/wordle_stats_screen"
                    android:layout_width="290dp"
                    android:layout_height="110dp"
                    app:srcCompat="@drawable/wordlelogin"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:id="@+id/stat_distribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_distrb"
            android:gravity="center_horizontal"
            android:textSize="30sp"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/one_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/one_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/two_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/two_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/three_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/three_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/four_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/four_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/five_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/five_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:id="@+id/six_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>
            <ProgressBar
                    android:id="@+id/six_guess_win_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>