<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@drawable/wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:id="@+id/mainToGameBtn"
            app:srcCompat="@drawable/wordle"
            android:layout_width="241dp"
            android:layout_height="262dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.251"
            tools:ignore="SpeakableTextPresentCheck"/>
    <Button
            android:id="@+id/mainToLoginBtn"
            android:text="@string/login_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintVertical_bias="0.664"
            app:backgroundTint="@color/wordle_yellow"
            android:background="@drawable/button_box"/>
    <Button
            android:id="@+id/mainToStatsBtn"
            android:text="@string/stats_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintVertical_bias="0.664"
            app:backgroundTint="@color/wordle_yellow"
            android:background="@drawable/button_box"/>
    <Button
            android:id="@+id/mainToHowToBtn"
            android:text="@string/how_to_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.8"
            app:backgroundTint="@color/wordle_yellow"
            android:background="@drawable/button_box"/>

</androidx.constraintlayout.widget.ConstraintLayout>