<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginScreen"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/loginBackground"
            app:srcCompat="@drawable/wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:id="@+id/loginToMainBtn"
            app:srcCompat="@drawable/ic_twotone_arrow_circle_left_24"
            android:layout_width="54dp"
            android:layout_height="46dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginBackground"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintVertical_bias="0.09"
            android:background="@null"/>
    <ImageView
            android:id="@+id/loginTitle"
            app:srcCompat="@drawable/wordlelogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.306"
            app:layout_constraintHorizontal_bias="0.505"/>
    <EditText
            android:id="@+id/loginEmail"
            android:drawableStart="@drawable/ic_twotone_account_box_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.506"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/white"
            android:background="@drawable/edittext_box"
            android:padding="5dp"
            android:ems="10" app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:id="@+id/loginPassword"
            android:drawableStart="@drawable/ic_twotone_lock_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.695"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/white"
            android:background="@drawable/edittext_box"
            android:padding="5dp"
            android:ems="10" app:layout_constraintHorizontal_bias="0.502"/>
    <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.744"
            app:layout_constraintVertical_bias="0.566"
            android:text="@string/action_sign_in"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/wordle_yellow"/>
    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintVertical_bias="0.759"
            android:text="@string/action_forgot_pwd"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/wordle_yellow"/>
</androidx.constraintlayout.widget.ConstraintLayout>